WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282753
ARMv7: Fix testIToD and friends
https://bugs.webkit.org/show_bug.cgi?id=282753
Summary
ARMv7: Fix testIToD and friends
Angelos Oikonomopoulos
Reported
2024-11-07 05:15:01 PST
Properly build CCall with Int64 argument.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-11-07 05:17:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36323
EWS
Comment 2
2024-11-07 14:45:21 PST
Committed
286302@main
(c1b1c2c07d0a): <
https://commits.webkit.org/286302@main
> Reviewed commits have been landed. Closing PR #36323 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-07 14:46:15 PST
<
rdar://problem/139469621
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug