ARMv7: Fix testIToD and friends https://bugs.webkit.org/show_bug.cgi?id=282753

Reviewed by Justin Michaud.

Correctly synthesize the CCall with an Int64 argument.

* Source/JavaScriptCore/b3/B3LowerInt64.cpp:
* Source/JavaScriptCore/b3/testb3_failingArmV7Tests.inc:

Canonical link: https://commits.webkit.org/286302@main